--- a/.github/workflows/build-for-windows.yml
+++ b/.github/workflows/build-for-windows.yml
@@ -9,7 +9,11 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-
+    
+    defaults:
+      run:
+        working-directory: ./smblevelworkshop2
+        
     steps:
     - uses: actions/checkout@v3
       with:
