--- a/.github/workflows/build-for-windows.yml
+++ b/.github/workflows/build-for-windows.yml
@@ -16,7 +16,7 @@ jobs:
         
     steps:
     - name: Check out project
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
       with:
         submodules: 'true'
         
