--- a/.github/workflows/build-for-windows.yml
+++ b/.github/workflows/build-for-windows.yml
@@ -22,29 +22,55 @@ jobs:
     - uses: microsoft/setup-msbuild@v1.0.2
     
     - name: Build the project
-      run: msbuild /P:Configuration=Release,DebugSymbols=false,DebugType=None,OutputPath=./out
+      run: msbuild /M /P:Configuration=Release,DebugSymbols=false,DebugType=None,OutputPath=./out
       
     - name: Collect artifacts
       run: |
-        mkdir ./artifacts
-        copy /Y ./GxExtender/out ./artifacts
-        copy /Y ./GxLoadSaveTestApp/out ./artifacts
-        copy /Y ./GxModelViewer/out ./artifacts
-        copy /Y ./GxModelViewer_WinFormsExt/out ./artifacts
-        copy /Y ./LibGxFormat/out ./artifacts
-        copy /Y ./LibGxTexture/out ./artifacts
-        copy /Y ./TreeViewMS/out ./artifacts
-        copy /Y ./CHANGES.txt
-        copy /Y ./COPYING.txt
-        copy /Y ./CREDITS.txt
-        copy /Y ./MiscUtilLicense.txt
-        copy /Y ./OpenTkLicense.txt
-        copy /Y ./README.md
+        mkdir .\artifacts
+        copy /Y .\GxExtender\out .\artifacts
+        copy /Y .\GxLoadSaveTestApp\out .\artifacts
+        copy /Y .\GxModelViewer\out .\artifacts
+        copy /Y .\GxModelViewer_WinFormsExt\out .\artifacts
+        copy /Y .\LibGxFormat\out .\artifacts
+        copy /Y .\LibGxTexture\out .\artifacts
+        copy /Y .\TreeViewMS\out .\artifacts
+        copy /Y .\CHANGES.txt
+        copy /Y .\COPYING.txt
+        copy /Y .\CREDITS.txt
+        copy /Y .\MiscUtilLicense.txt
+        copy /Y .\OpenTkLicense.txt
+        copy /Y .\README.md
         
-    - name: Upload artifacts
-      uses: actions/upload-artifact@v3.1.2
+    - name: Get commit number
+      id: get_commit_number
+      run: echo "COMMIT_NUMBER=$(git rev-list --all --count)" >> $GITHUB_OUTPUT
+        
+    - name: Get version number
+      id: get_version_number
+      env:
+        major: "1.0"
+        seperator: "-"
+        commit: ${{ steps.get_commit_number.outputs.COMMIT_NUMBER }}
+      run: echo "VERSION_NUMBER=$major$seperator-$commit" >> $GITHUB_OUTPUT
+      
+    - name: Create release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        # Artifact name
-        name: gx-windows
-        # A file, directory or wildcard pattern that describes what to upload
-        path: ./artifacts
+        tag_name: ${{ steps.get_version_number.outputs.VERSION_NUMBER }}
+        release_name: ${{ steps.get_version_number.outputs.VERSION_NUMBER }}
+        draft: false
+        prerelease: false
+    - name: Upload Release Asset
+      id: upload-release-asset 
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} 
+        asset_path: ./GxUtils-Windows.zip
+        asset_name: GxUtils-Windows.zip
+        asset_content_type: application/zip
+        
