--- a/.github/workflows/build-for-windows.yml
+++ b/.github/workflows/build-for-windows.yml
@@ -34,12 +34,12 @@ jobs:
         copy -Force -Path .\LibGxFormat\out -Destination .\artifacts
         copy -Force -Path .\LibGxTexture\out -Destination .\artifacts
         copy -Force -Path .\TreeViewMS\out -Destination .\artifacts
-        copy -Force -Path .\CHANGES.txt -Destination .\artifacts
-        copy -Force -Path .\COPYING.txt -Destination .\artifacts
-        copy -Force -Path .\CREDITS.txt -Destination .\artifacts
-        copy -Force -Path .\MiscUtilLicense.txt -Destination .\artifacts
-        copy -Force -Path .\OpenTkLicense.txt -Destination .\artifacts
-        copy -Force -Path .\README.md -Destination .\artifacts
+        copy -Force -Path ..\CHANGES.txt -Destination .\artifacts
+        copy -Force -Path ..\COPYING.txt -Destination .\artifacts
+        copy -Force -Path ..\CREDITS.txt -Destination .\artifacts
+        copy -Force -Path ..\MiscUtilLicense.txt -Destination .\artifacts
+        copy -Force -Path ..\OpenTkLicense.txt -Destination .\artifacts
+        copy -Force -Path ..\README.md -Destination .\artifacts
         
     - name: Get commit number
       id: get_commit_number
