--- a/.github/workflows/build-for-windows.yml
+++ b/.github/workflows/build-for-windows.yml
@@ -18,6 +18,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         submodules: 'true'
+        fetch-depth: 0
         
     - uses: microsoft/setup-msbuild@v1.0.2
     
@@ -43,15 +44,15 @@ jobs:
         
     - name: Get commit number
       id: get_commit_number
-      run: echo "COMMIT_NUMBER=$(git rev-list --all --count)" >> $env:GITHUB_OUTPUT
+      run: echo "commit_number=$(git rev-list --all --count)" >> $env:GITHUB_OUTPUT
         
     - name: Get version number
       id: get_version_number
       env:
         major: "1.0"
         seperator: "-"
-        commit: ${{ steps.get_commit_number.outputs.COMMIT_NUMBER }}
-      run: echo "VERSION_NUMBER=$major$seperator-$commit" >> $env:GITHUB_OUTPUT
+        commit: ${{ steps.get_commit_number.outputs.commit_number }}
+      run: echo "version_number=$major$seperator-$commit" >> $env:GITHUB_OUTPUT
       
     - name: Create release
       id: create_release
@@ -59,8 +60,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: ${{ steps.get_version_number.outputs.VERSION_NUMBER }}
-        release_name: ${{ steps.get_version_number.outputs.VERSION_NUMBER }}
+        tag_name: ${{ steps.get_version_number.outputs.version_number }}
+        release_name: ${{ steps.get_version_number.outputs.version_number }}
         draft: false
         prerelease: false
     - name: Upload Release Asset
