--- a/.github/workflows/build-for-windows.yml
+++ b/.github/workflows/build-for-windows.yml
@@ -41,6 +41,7 @@ jobs:
         copy -Force -Path ..\MiscUtilLicense.txt -Destination .\artifacts
         copy -Force -Path ..\OpenTkLicense.txt -Destination .\artifacts
         copy -Force -Path ..\README.md -Destination .\artifacts
+        7z.exe a GxUtils-Windows.zip .\artifacts
         
     - name: Get commit number
       id: get_commit_number
@@ -52,7 +53,7 @@ jobs:
         major: "1.0"
         seperator: "-"
         commit: ${{ steps.get_commit_number.outputs.commit_number }}
-      run: echo "version_number=$env:major$env:seperator-$env:commit" >> $env:GITHUB_OUTPUT
+      run: echo "version_number=$env:major$env:seperator$env:commit" >> $env:GITHUB_OUTPUT
       
     - name: Create release
       id: create_release
