--- a/.github/workflows/build-for-windows.yml
+++ b/.github/workflows/build-for-windows.yml
@@ -42,7 +42,7 @@ jobs:
         copy -Force -Path ..\MiscUtilLicense.txt -Destination .\artifacts
         copy -Force -Path ..\OpenTkLicense.txt -Destination .\artifacts
         copy -Force -Path ..\README.md -Destination .\artifacts
-        7z.exe a -r -x!*.config ..\GxUtils-Windows.zip .\artifacts\*
+        7z.exe a ..\GxUtils-Windows.zip .\artifacts\* "-x!*.config"
         
     - name: Get commit number
       id: get_commit_number
