--- a/GxUtils/GxModelViewer/GxModelViewer.csproj
+++ b/GxUtils/GxModelViewer/GxModelViewer.csproj
@@ -120,7 +120,7 @@
     <Compile Include="ModelViewer.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ModelViewer.designer.cs">
+    <Compile Include="ModelViewer.Designer.cs">
       <DependentUpon>ModelViewer.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
