--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ GxUtils/.vs/GxUtils/v16/Server/sqlite3/db.lock
 GxUtils/.vs/GxUtils/v16/Server/sqlite3/storage.ide
 GxUtils/.vs/GxUtils/v16/Server/sqlite3/storage.ide-shm
 GxUtils/.vs/GxUtils/v16/Server/sqlite3/storage.ide-wal
+GxUtils/.idea
